Fix position of some text on tablet

--- a/sass/layout/_howItWork.scss
+++ b/sass/layout/_howItWork.scss
@@ -60,7 +60,7 @@
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
     .howItWork{
         height: fit-content;
         padding : 1rem 0 0 0;
