--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -135,7 +135,7 @@
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
     .restaurants  {
 
         height: fit-content;
