--- a/sass/layout/_rightPartOnComputer.scss
+++ b/sass/layout/_rightPartOnComputer.scss
@@ -3,7 +3,7 @@
     margin : 0 0 0 0;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
     .rightPartOnComputer   {
         padding : 0 1rem 0 1rem;
         display: flex;
